cp3-networkpolicy/egress/cert-manager/bedrock-egress-ibm-cert-manager-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-cert-manager-webhook
  namespace: "certNamespace"
  labels:
    component: cpfs3
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      app: "ibm-cert-manager-webhook"
  policyTypes:
  - Egress
